test_suite/tests/ui/conflict/field-into-serialize-with.stderr
error: #[serde(into = "...")] and #[serde(serialize_with = "...")] conflict with each other
 --> $DIR/field-into-serialize-with.rs:5:5
  |
5 | /     #[serde(into = "u64", serialize_with = "ser_unit")]
6 | |     a: u8,
  | |_________^
